--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1404,7 +1404,7 @@ de:
           href: https://twitter.com/claratpunktorg
       header:
         about: Über uns
-        blog: 
+        blog: Blog
         contact: Kontakt
         faq: Häufige Fragen
         languages:
