--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1054,10 +1054,10 @@ pl:
           anchor: Twitter
           href: https://twitter.com/claratpunktorg
       header:
-        about: 
-        blog: 
-        contact: 
-        faq: 
+        about: O nas
+        blog: Blog
+        contact: kontakt
+        faq: Często zadawane pytania
         languages:
           ar: عربي
           de: Deutsch
