--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -738,7 +738,7 @@ en:
         back: Previous
         gap: "…"
         next: Next
-      reset_label: reset al
+      reset_label: reset all
       sort:
         nearby: nearby
         relevance: Best matches
