--- a/config/locales/fa.yml
+++ b/config/locales/fa.yml
@@ -963,6 +963,25 @@ fa:
             refugees:
               heading: 
               text: 
+        callout_neutral:
+          how:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          what:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          who:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
       footer:
         about: در مورد ما
         blog: بلاگ
