--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -988,6 +988,25 @@ fr:
             refugees:
               heading: 
               text: 
+        callout_neutral:
+          how:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          what:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          who:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
       footer:
         about: À propos de nous
         blog: Blog
