--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1015,6 +1015,25 @@ ru:
             refugees:
               heading: 
               text: 
+        callout_neutral:
+          how:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          what:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
+          who:
+            heading: 
+            refugees:
+              heading: 
+              text: 
+            text: 
       footer:
         about: О нас
         blog: Блог
