--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1381,6 +1381,25 @@ de:
             refugees:
               heading: Wer findet hier Hilfe?
               text: Alle Menschen, die nach Deutschland geflüchtet sind. Auch geflüchtete Kinder und Jugendliche. Und Menschen, die Hilfe für Flüchtlinge suchen.
+        callout_neutral:
+          how:
+            heading: Wie helfen wir?
+            refugees:
+              heading: 
+              text: 
+            text: Wir helfen dir, die passende Hilfe in deiner Nähe zu finden. Wir ordnen alle Hilfen und machen sie durch einfache Sprache verständlich.
+          what:
+            heading: Was wollen wir?
+            refugees:
+              heading: 
+              text: 
+            text: clarat klärt auf – über Hilfsangebote in Deutschland. Denn wir wollen, dass jeder die Hilfe findet, die er braucht.
+          who:
+            heading: Wer sind wir?
+            refugees:
+              heading: 
+              text: 
+            text: Wir sind ein gemeinnütziges Projekt der Benckiser Stiftung Zukunft. Die Stiftung möchte Kinder, Jugendlichen und Familien in schwierigen Situationen helfen.
       footer:
         about: Über uns
         blog: Blog
