--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1361,10 +1361,10 @@ de:
               heading: 
           how:
             family:
-              heading: Wie funktioniert clarat family?
+              heading: Wie funktioniert clarat?
               text: 'Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt. '
             refugees:
-              heading: Wie funktioniert clarat refugees?
+              heading: Wie funktioniert clarat?
               text: Gib dein Problem in das Suchfeld ein und den Ort, an dem du suchst. Klicke auf die Lupe. Du bekommst die Hilfen in deiner Nähe auf einen Blick angezeigt.
           what:
             family:
