--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -932,10 +932,10 @@ en:
               heading: 
           how:
             family:
-              heading: How does clarat family work?
+              heading: How does clarat work?
               text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
             refugees:
-              heading: How does clarat refugees work?
+              heading: How does clarat work?
               text: Enter your problem into the search field and the area where you are looking. Click on the magnifying glass. The support services in your area will show up instantly.
           what:
             family:
