--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -2016,6 +2016,9 @@ de:
         show:
           email: 
           name: 
+        show_offer:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
