--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1591,6 +1591,9 @@ pl:
         show:
           email: 
           name: 
+        show_offer:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
