--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1586,6 +1586,9 @@ ru:
         show:
           email: 
           name: 
+        show_offer:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
