--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1485,6 +1485,9 @@ tr:
         show:
           email: 
           name: 
+        show_offer:
+          email: 
+          name: 
     placeholders:
       search_form:
         home:
