--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -120,7 +120,7 @@ ar:
           answer: بعض العروض في <b>كلارات الأسرة</b> و<b>كلارات اللاجئين</b> يمكن الاستفادة منها من  كل الأنحاء. سواء كنت تسكن في أي مكان ستجد العديد من العروض والتي من خلالها يساعدك شخص عن طريق الهاتف أو الإنترنت؛ أي عن طريق الشات أو المنتديات. ولكن العديد من العروض يمكنك الاستفادة منها فقط حيت تسكن. في <b>كلارات اللاجئين</b> تجد قريبا عروضا للعديد من المدن الكبيرة في ألمانيا. وهي حاليا برلين، هامبورغ، ميونخ، دورتموند، دوسلدورف، كولن، نورينبيرغ، وشتوتغارت. أما في <b>كلارات الأسرة</b> فقد بدأنا ببرلين. هنا توجد بالفعل عروض كثيرة. ولكننا نجمع عروضاً أكثر. وقريباً سيكون لمدن كبرى أخرى في ألمانيا.
           question: هل توجد كلارات لألمانيا كلها؟
         question_8:
-          answer: كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مجمعة وبشكل عام. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونحن نكتب دائما بلغة سهلة ويمكن للجميع ان يفهمها. حتى يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}.
+          answer: كلارات تعرض لك المساعدة المتاحة بالقرب منك. فإنك تجد كل العروض مُجَمعة؛ وتحديداً في لمحة عامة. علاوة على ذلك فنحن نقول لك ما يجب عليك أن تفعل بالضبط لكي تحصل على المساعدة. ونكتب دائما بلغة سهلة حتى يمكن للجميع ان يفهمها. ولكي يتمكن الناس الذين لا يجيدون الألمانية من العثور على المساعدة؛ كما يمكنك أيضا أن تقرأ العروض بلغات أخرى عديدة. إذا أردت أن تعرف أكثر عن هذه اللغات؛ إضغط هنا %{ref_to_how_many_languages}.
           link_1:
             class: FAQ_anchor_link
             name: هنا
@@ -356,9 +356,9 @@ ar:
           two: لك <strong>%{count} كلارات اللاجئين</strong>-عروض
           zero: NOTRANSLATE
       shared:
-        explanation_1: 'هنا سترى كل العروض الخاصة بك بشكل مجمع. هذه العروض هي التي وجدنا عندها عنوان البريد الإليكتروني الخاص بك كعنوان للتواصل. '
+        explanation_1: هنا سترى كل العروض الخاصة بك بشكل مُجَمع. هذه العروض هي التي وجدنا عندها عنوان البريد الإليكتروني الخاص بك كعنوان للتواصل.
         explanation_2: لذا  وجدنا في المستقبل عروضا خاصة بك فسوف تتمكن من روية الروابط لهذه العروض أيضا.
-        explanation_3: يمكنك أيضا إضافة هذه الصفحة إلى مفضلاتك وبذلك ترى بشكل مجمع ماذا يوجد في كلارات من طرفك.
+        explanation_3: يمكنك أيضا إضافة هذه الصفحة إلى مفضلاتك وبذلك ترى بشكل مُجَمع ماذا يوجد في كلارات من طرفك.
         explanation_4: 'هل تريد أن يتم إبلاغك عن طريق الإيميل؛ عندما توجد عروضا جديدة من طرفك أون لاين في كلارات؟ إذا استخدم الرابط في نهاية الإيميل الذي وصلك منا.  '
         info: معلومات
     subscribe:
@@ -955,7 +955,7 @@ ar:
           family: مساعدة للأطفال والمراهقين و الأسرة
         hero:
           button_label: لمعرفة المزيد
-          logline: ستجد المساعدة المناسبة لك - بشرح مبسط وبشكل مجمع
+          logline: ستجد المساعدة المناسبة لك - بشرح مبسط وبشكل مُجَمع
       modal:
         beta_modal:
           link: ارسل لنا ببساطة رسالة بريد إليكتروني
@@ -1473,6 +1473,9 @@ ar:
           email: 
           name: 
         show:
+          email: 
+          name: 
+        show_offer:
           email: 
           name: 
     placeholders:
