--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -758,6 +758,7 @@ fr:
         approach: De quelle Manière?
         gender: Sexe
         language: Langue
+        main: 
         residency_status: 
         sort: Trier par
         target_audience: De l'aide pour qui?
@@ -1543,6 +1544,9 @@ fr:
           email: 
           name: 
         show:
+          email: 
+          name: 
+        show_offer:
           email: 
           name: 
     placeholders:
