--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -806,6 +806,7 @@ pl:
         approach: W jaki sposób?
         gender: Płeć
         language: Język
+        main: 
         residency_status: 
         sort: Sortuj według
         target_audience: Pomoc dla kogo?
@@ -1589,6 +1590,9 @@ pl:
           email: 
           name: 
         show:
+          email: 
+          name: 
+        show_offer:
           email: 
           name: 
     placeholders:
