--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -787,6 +787,7 @@ ru:
         approach: Каким образом?
         gender: Пол
         language: Язык
+        main: 
         residency_status: 
         sort: Сортировка по
         target_audience: Помощь для кого?
@@ -1538,7 +1539,7 @@ ru:
     definitions: формулировки
     emails: электронные-письма
     faq: Частые-вопросы
-    fr: fr
+    fr: 
     haeufige-fragen: Частые-вопросы
     home: главная страница
     impressum: Импрессум
@@ -1584,6 +1585,9 @@ ru:
           email: 
           name: 
         show:
+          email: 
+          name: 
+        show_offer:
           email: 
           name: 
     placeholders:
